--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-cli</title>
+    <title>Ticketing</title>
+    <Link type="text/css" href="src/assets/css/style.css" rel="stylesheet"/>
   </head>
   <body>
     <div id="app"></div>
