supression erreur node

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Ticketing</title>
-    <!--Fonts-->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <Link type="text/css" href="src/assets/css/style.css" rel="stylesheet"/>
   </head>
   <body>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
